2009-10-26  Joanmarie Diggs  <joanmarie.diggs@gmail.com>

        Reviewed by Xan Lopez.

        https://bugs.webkit.org/show_bug.cgi?id=27085
        [Gtk] Incorrect rendering of list

        Adds a way for platforms to indicate that a particular object
        should not be ignored.

        * accessibility/AccessibilityObject.h:
        * accessibility/chromium/AccessibilityObjectChromium.cpp:
        * accessibility/gtk/AccessibilityObjectAtk.cpp:
        * accessibility/mac/AccessibilityObjectMac.mm:
        * accessibility/qt/AccessibilityObjectQt.cpp:
        * accessibility/win/AccessibilityObjectWin.cpp:
        * accessibility/wx/AccessibilityObjectWx.cpp:
        (AccessibilityObject::accessibilityPlatformIncludesObject):
        * accessibility/AccessibilityRenderObject.cpp:
        (AccessibilityRenderObject::accessibilityIsIgnored):

2009-10-26  Kinuko Yasuda  <kinuko@google.com>

        Reviewed by Jan Alonzo.

        Bug 30619: [Linux] Menu key doesn't work
        https://bugs.webkit.org/show_bug.cgi?id=30619

        Test: manual-tests/keyboard-menukey-event.html
        No new layout tests: testing this will require changes in the test
        controller in a platform-specific way.

        * platform/chromium/KeyCodeConversionGtk.cpp:
        (WebCore::windowsKeyCodeForKeyEvent): changed switch-case code for
        GDK_Menu to return VKEY_APPS instead of VKEY_MENU.
        * platform/gtk/KeyEventGtk.cpp:
        (WebCore::windowsKeyCodeForKeyEvent): changed switch-case code for
        GDK_Menu to return V_APPS instead of VK_MENU.

2009-10-25  Anton Muhin  <antonm@chromium.org>

        Reviewed by Adam Barth.

        Reuse already fetched proxy.
        https://bugs.webkit.org/show_bug.cgi?id=30747

        * bindings/v8/V8DOMWrapper.cpp:
        (WebCore::V8DOMWrapper::convertNewNodeToV8Object):

2009-10-25  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Unreviewed build fix.
